--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat: 400, 700|Heebo:400, 700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat+Subrayada|Montserrat: 400, 700|Heebo:400, 700" rel="stylesheet">
     <title>My Custom Nav with Javascript</title>
 </head>
 <body>
